--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.5.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
   },
