--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
