--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/node": "^22.15.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   }
