--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,7 @@
 {
-  "buildCommand": "npm install && npm run build",
   "framework": "vite",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "outputDirectory": "dist",
   "nodeVersion": "18.x"
 }
