--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,6 +2,5 @@
   "framework": "vite",
   "buildCommand": "npm run build",
   "installCommand": "npm install",
-  "outputDirectory": "dist",
-  "nodeVersion": "18.x"
+  "outputDirectory": "dist"
 }
